fix(button): udpate fg colour for better contrast

--- a/packages/osc-ui/src/components/Button/button.scss
+++ b/packages/osc-ui/src/components/Button/button.scss
@@ -88,7 +88,7 @@
         tertiary: (
             bg-color: transparent,
             bg-hover-color: var(--color-secondary),
-            fg-color: var(--color-neutral-600),
+            fg-color: var(--color-neutral-700),
             fg-hover-color: var(--color-tertiary),
             font-weight: $fw-bold,
             letter-spacing: $ls-xs,
